# ai-coding

./: .gitignore  README.md  pyproject.toml
src/AICodeforcer/: __init__.py  main.py
src/AICodeforcer/interactive/: __init__.py
src/AICodeforcer/interactive/agents/: __init__.py  judge_validator.py  preprocessor.py  solver.py
src/AICodeforcer/interactive/tools/: __init__.py  interaction_runner.py  interactive_stress_test.py
src/AICodeforcer/standard/: __init__.py
src/AICodeforcer/standard/agents/: __init__.py  brute_force.py  cpp_translator.py  solver.py
src/AICodeforcer/standard/tools/: __init__.py  run_python.py  stress_test.py
